--- a/CHANGES
+++ b/CHANGES
@@ -10,7 +10,8 @@
    and later.
  - Cleanup of some code called by nvtoa().
  - Fix bug in _get_exp_and_bits() for DoubleDoubles. Integer values > 2 ** 105
-   being misrepresented by nvtoa().
+   were being misrepresented by nvtoa().
+ - Improve the private functions _d_bytes, _ld_bytes, _dd_bytes, _f128_bytes
 
 4.12
  - Fix bug in nvtoa() that had values with negative single digit significands &&
