--- a/CHANGES
+++ b/CHANGES
@@ -13,7 +13,8 @@
    were being misrepresented by nvtoa().
  - Improve the private functions _d_bytes, _ld_bytes, _dd_bytes, _f128_bytes
  - Replace the private functions _d_bytes_fr, _ld_bytes_fr, _dd_bytes_fr,
-   _f128_bytes_fr with tghe single function _bytes_fr.
+   _f128_bytes_fr with the single function _bytes_fr.
+ - Remove mpfr_min_inter_base() and mpfr_max_orig_base() as both are of no value.
 
 4.12
  - Fix bug in nvtoa() that had values with negative single digit significands &&
