--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+4.15
+ - Add numtoa()
+
 4.14
  - #include <inttypes.h> at beginning of grisu3.h to address:
    https://www.cpantesters.org/cpan/report/0d8a8dfd-6bf4-1014-a7c0-8323ad4a5811
