--- a/CHANGES
+++ b/CHANGES
@@ -5,7 +5,10 @@
    https://www.cpantesters.org/cpan/report/0d8a8dfd-6bf4-1014-a7c0-8323ad4a5811
  - Fix https://www.cpantesters.org/cpan/report/3622b742-4202-11ea-8c53-8f701f24ea8f
    by amending Makefile.PL
- - Add some debug statements throughout nvtoa() in MPFR.xs.
+ - Add some debug statements throughout nvtoa() in MPFR.xs - relies on NVTOA_DEBUG=1
+   being provided as a Makefile.PL command line argument .
+ - Correct test 5 of t/numtoa.t for DoubleDouble nvtype.
+ - Add wrapping of mpfr_total_order_p (previously missed) which is new in 4.1.0.
 
 4.13
  - Fix bug in t/rndna.t and t/rndna2.t (exposed by:
