--- a/CHANGES
+++ b/CHANGES
@@ -9,6 +9,7 @@
    being provided as a Makefile.PL command line argument .
  - Correct test 5 of t/numtoa.t for DoubleDouble nvtype.
  - Add wrapping of mpfr_total_order_p (previously missed) which is new in 4.1.0.
+ - Add wrapping of mpfr_cmpabs_ui (previously missed) which is new in 4.1.0.
 
 4.13
  - Fix bug in t/rndna.t and t/rndna2.t (exposed by:
