Correct "it's" to "its".
See:

https://www.grammar-monster.com/easily_confused/its_its.htm .

This was broken grammar or spelling .

TODO: do the misspellings also exist in the original libmpfr documentation?

--- a/CHANGES
+++ b/CHANGES
@@ -369,7 +369,7 @@
    (documented for the first time in 2.3.0).
  - Add Rmpfr_init_set_ld.
  - Add Rmpfr_deref2 to the list of exportable functions, and
-   document it's usage in the POD section.
+   document its usage in the POD section.
  - Rmpfr_deref2 now has the mpfr library allocate (and free) memory
    for the mantissa.
  - Add Rmpfr_hypot (previously missed).
