--- a/MPFR.pod
+++ b/MPFR.pod
@@ -1712,23 +1712,6 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
 
    MISCELLANEOUS
 
-   $nv = atodouble($str); # Needs mpfr-3.1.6 or later
-    Sets the $nv to the value of the double that's represented by
-    the string $str.
-    If $Config{nvtype} is double, it therefore returns the same
-    value as atonv.
-    See atonv(), immediately below.
-
-   $nv = atonv($str); # Needs mpfr-3.1.6 or later
-    Sets $nv to the NV value represented by the string $str.
-    If $str expresses a base 2 value, begin it with '0b' or '0B'.
-    If $str expresses a base 16 value, begin it with '0x' or '0X.
-    For example:
-      atonv('0x0.89p5'), atonv('0x0.112@2'), atonv('17.125') and
-      atonv('0b0.10001001e5') all return 17.125.
-    NOTE: ORIGINALLY TOOK 2 ARGUMENTS - NOW TAKES ONLY 1, as of
-          Math-MPFR-4.07.
-
    $str = doubletoa($nv [, $x]); # Available only when
                                  # $Config{nvsize} == 8.
                                  # Else use nvtoa().
@@ -1749,6 +1732,13 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
     will be incremented. This feature can be disabled by providing
     the FB=0 argument to the 'perl Makefile.PL' step of the
     Math::MPFR build.
+
+   $nv = atodouble($str); # Needs mpfr-3.1.6 or later
+    Sets the $nv to the value of the double that's represented by
+    the string $str.
+    If $Config{nvtype} is double, it therefore returns the same
+    value as atonv.
+    See atonv() below.
 
    $str = nvtoa($nv); # Available irrespective of $Config{nvsize}
                       # and $Config{nvtype}
@@ -1776,11 +1766,25 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
             With double-double NVs, nvtoa() currently requires
             mpfr-4.0.0 or later.
 
+   $nv = atonv($str); # Needs mpfr-3.1.6 or later
+    Sets $nv to the NV value represented by the string $str.
+    If $str expresses a base 2 value, begin it with '0b' or '0B'.
+    If $str expresses a base 16 value, begin it with '0x' or '0X.
+    For example:
+      atonv('0x0.89p5'), atonv('0x0.112@2'), atonv('17.125') and
+      atonv('0b0.10001001e5') all return 17.125.
+    NOTE: ORIGINALLY TOOK 2 ARGUMENTS - NOW TAKES ONLY 1, as of
+          Math-MPFR-4.07.
+
    $str = numtoa($sv);
     As for nvtoa() but prints out UVs and IVs in integer format.
     (If UV-precision is greater than NV-precision then nvtoa()
     output can lose precision as it prints out UVs and IVs in floating
     point format.)
+
+   $sv = atonum($str); # Needs mpfr-3.1.6 or later
+    If $str numifies to an IV, return that IV.
+    Else return the NV that is returned by atonv($str).
 
    $MPFR_version = Rmpfr_get_version();
     Returns the version of the MPFR library (eg 4.0.2) being used by
