--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,9 @@
 4.15
- - Make some changes relatng to bareword filehandles and indirect object syntax.
+ - Make some changes in test files relating to bareword filehandles and indirect
+   object syntax.
  - Enhance the Makefile.PL's capability of detecting that mpfr/gmp libraries are
    not going to be found when needed.
+ - Add decimalize(), get_exact_decimal() and check_exact_decimal().
 
 4.14
  - Add numtoa() and atonum().
