--- a/CHANGES
+++ b/CHANGES
@@ -3,7 +3,8 @@
    object syntax.
  - Enhance the Makefile.PL's capability of detecting that mpfr/gmp libraries are
    not going to be found when needed.
- - Add decimalize(), get_exact_decimal() and check_exact_decimal().
+ - Add decimalize() and check_exact_decimal().
+
 
 4.14
  - Add numtoa() and atonum().
