--- a/MPFR.pod
+++ b/MPFR.pod
@@ -2229,8 +2229,13 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
      abs atan2 cos sin log exp (Return object has default precision)
      int (On perl 5.8 only, NA on perl 5.6. The return object
           has default precision)
-     = (The copy has the same precision as the copied object.)
      ""
+     = (The copy has the same precision as the copied object.)
+
+    NOTE: Making use of the '=' overloading is not recommended unless
+          you understand its caveats. See 'perldoc overload' and
+          read it thoroughly, including the documentation regarding
+          'copy constructors'.
 
     All overloaded comparisons ( < <= > >= == != <=> ) between
     Math::MPFR and Math::GMPz objects or between Math::MPFR and
