--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,7 @@
  - Enhance the Makefile.PL's capability of detecting that mpfr/gmp libraries are
    not going to be found when needed.
  - Add decimalize() and check_exact_decimal().
+ - Add Rmpfr_sinu and Rmpfr_cosu - for mpfr-4.2.0 and later only.
 
 
 4.14
