--- a/CHANGES
+++ b/CHANGES
@@ -4,7 +4,8 @@
  - Enhance the Makefile.PL's capability of detecting that mpfr/gmp libraries are
    not going to be found when needed.
  - Add decimalize() and check_exact_decimal().
- - Add Rmpfr_sinu and Rmpfr_cosu - for mpfr-4.2.0 and later only.
+ - For mpfr-4.2.0 and later only: add Rmpfr_sinu, Rmpfr_cosu, Rmpfr_tanu,
+   Rmpfr_sinpi, Rmpfr_cospi and Rmpfr_tanpi.
 
 
 4.14
